# PicoMandlebrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  mandelbrot.c  mandelbrot.h  nunchuck.c  nunchuck.h  st7789_lcd.c  st7789_lcd.h  st7789_lcd.pio
